<resources>
    <string name="app_name">ReadItApp</string>
    <string name="card_number">Card Number</string>
    <string name="password">Password</string>
    <string name="readit_achievements">ReadIt Achievements</string>
    <string name="readit_challenges">ReadIt Challenges</string>
    <string name="readit_quiz">ReadIt Quiz</string>
    <string name="homepage_logout">Logout</string>
    <string name="books_you_are_reading">Books you are reading</string>
    <string name="login">Login</string>
    <string name="applogo">AppLogo</string>
    <string name="welcome_to_the_quiz_about">Welcome to the quiz about</string>
    <string name="start">Start</string>
    <string name="next">Next</string>
    <string name="most_recent_badges">Most Recent Badges</string>
    <string name="dragon_slayer">Dragon Slayer</string>
    <string name="princes_saved">Princes Saved</string>
    <string name="cinderella_s_badge">Cinderella\'s Badge</string>
    <string name="other_badges">Other Badges</string>
    <string name="readit_score_420">ReadIt Score 420</string>
</resources>
